tests/frontend-tls-versions/kuadrant/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - 00-namespaces.yaml
  - 01-clusterissuer-selfsigned.yaml
  - 02-gateway.yaml
  - 03-tlspolicy.yaml
  - 04-httproute.yaml
